Driver load fix
Former-commit-id: 87f51d3d705585f4bebf7033e3f8255f2a4da28e